@@ -59,7 +59,9 @@ The following information is located here:
 <UL>
 	<li> Get rid of the old configuration system and switch to
 	GNU autotools.
-
+	
+	<li> tiffset: tiffset now can set any libtiff supported tags. Tags
+	can be supplied by the mnemonic name or number.
 </UL>
 
 <P><HR WIDTH=65% ALIGN=left>
@@ -172,6 +174,9 @@ The following information is located here:
 <A NAME="tools"><B><FONT SIZE=+3>C</FONT>HANGES IN THE TOOLS:</B></A>
 
 <UL>
+	<li> tiffset: tiffset now can set any libtiff supported tags. Tags
+	can be supplied by the mnemonic name or number.
+
 	<li> ycbcr.c: fixed main() declaration as per:
 	<a href="http://bugzilla.remotesensing.org/show_bug.cgi?id=513">
 		http://bugzilla.remotesensing.org/show_bug.cgi?id=513</a>.
@@ -238,7 +243,7 @@ KIT:</B></A>
 
 <HR>
 
-Last updated $Date: 2004-06-04 15:32:40 $.
+Last updated $Date: 2004-06-06 21:35:53 $.
 
 </BODY>
 </HTML>
